# functionalize-functors

./: LICENSE  README.md  functionalize-functors.cabal
src/Data/Functor/: Functionalize.hs
